--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "homebridge-httptemperaturehumidity",
-  "version": "0.0.15",
+  "name": "homebridge-http-temperature-humidity",
+  "version": "0.0.16",
   "description": "https plugin for homebridge",
   "license": "ISC",
   "keywords": [
@@ -11,11 +11,11 @@
     "homebridge": ">=0.2.0"
   },
   "author": {
-    "name": "Luca Critelli"
+    "name": "Valentin Knabel"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/lucacri/homebridge-http-temperature-humidity.git"
+    "url": "git://github.com/vknabel/homebridge-http-temperature-humidity.git"
   },
   "dependencies": {
     "sync-request": "^2.1.0"
