--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "homebridge": ">=0.2.0"
   },
   "author": {
-    "name": "Valentin Knabel",
+    "name": "Valentin Knabel"
   },
   "repository": {
     "type": "git",
